syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "google/protobuf/timestamp.proto";

import "storage/labels.proto";
import "gogoproto/gogo.proto";

package storage;

message NetworkPolicy {
    string                    id            = 1;
    string                    name          = 2;
    string                    cluster_id    = 3;
    string                    cluster_name  = 4;
    string                    namespace     = 5;
    map<string, string>       labels        = 6;
    map<string, string>       annotations   = 7;

    NetworkPolicySpec         spec          = 8;
    string                    yaml          = 9;
    string                    api_version   = 10;
    google.protobuf.Timestamp created       = 11;
}

message NetworkPolicySpec {
    LabelSelector                     pod_selector = 1;
    repeated NetworkPolicyIngressRule ingress      = 2;
    repeated NetworkPolicyEgressRule  egress       = 3;
    repeated NetworkPolicyType        policy_types = 4;
}

message NetworkPolicyEgressRule {
    repeated NetworkPolicyPort ports = 1;
    repeated NetworkPolicyPeer to    = 2;
}

message NetworkPolicyPeer {
    LabelSelector pod_selector       = 1;
    LabelSelector namespace_selector = 2;
    IPBlock       ip_block           = 3;
}

message IPBlock {
    string          cidr   = 1;
    repeated string except = 2;
}

message NetworkPolicyPort {
    Protocol protocol = 1;

    oneof port_ref {
        int32  port      = 2;
        string port_name = 3;
    }
}

enum Protocol {
    UNSET_PROTOCOL = 0;
    TCP_PROTOCOL   = 1;
    UDP_PROTOCOL   = 2;
    SCTP_PROTOCOL  = 3;
}

enum NetworkPolicyType {
    UNSET_NETWORK_POLICY_TYPE   = 0;
    INGRESS_NETWORK_POLICY_TYPE = 1;
    EGRESS_NETWORK_POLICY_TYPE  = 2;
}

message NetworkPolicyIngressRule {
    repeated NetworkPolicyPort ports = 1;
    repeated NetworkPolicyPeer from  = 2;
}

// Next available tag: 3
message NetworkPolicyReference {
    string namespace = 1;
    string name      = 2;
}

// Next available tag: 3
message NetworkPolicyModification {
    string apply_yaml                         = 1;
    repeated NetworkPolicyReference to_delete = 2;
}

message NetworkPolicyApplicationUndoRecord {
    string user                                 = 1;
    google.protobuf.Timestamp apply_timestamp   = 2;

    NetworkPolicyModification original_modification = 3;
    NetworkPolicyModification undo_modification     = 4;
}

message NetworkPolicyApplicationUndoDeploymentRecord {
    string deployment_id                            = 1 [(gogoproto.moretags) = 'sql:"pk"'];
    // For SAC
    string cluster_id                               = 2;
    string namespace                                = 3;

    NetworkPolicyApplicationUndoRecord undo_record  = 4;
}
